--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,4 @@ requires-python = ">=3.11"
 version = "2.0.0"
 
 [project.scripts]
-slideshow = "python-slideshow.slideshow:main"
+slideshow = "slideshow.slideshow:main"
