Bug: unable to process multiple sort chains in the same time

--- a/.gitignore
+++ b/.gitignore
@@ -260,5 +260,5 @@ $RECYCLE.BIN/
 
 ### Project ###
 slideshow/config_processors/*
-!slideshow/config_processors/__init__.py
+# !slideshow/config_processors/__init__.py
 slideshow/misc/
