--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,13 @@ readme = "README.md"
 requires-python = ">=3.11"
 version = "2.0.0"
 
+dependencies = [
+    "pillow",
+    "ffmpeg-python",
+]
+
+[project.optional-dependencies]
+gui = ["pyqt6", "python-vlc"]
+
 [project.scripts]
 slideshow = "slideshow.slideshow:main"
