--- a/.dockerignore
+++ b/.dockerignore
@@ -268,6 +268,10 @@ $RECYCLE.BIN/
 .history
 .ionide
 
+### Docker ###
+Dockerfile
+compose.yaml
+
 ### Project ###
 slideshow/config_processors/*
 # !slideshow/config_processors/__init__.py
